--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/style/style.css" />
+    <script src="assets/script/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio | Lucas Reis</title>
     <link
       rel="shortcut icon"
-      href="/img/doc2.png"
+      href="assets/img/doc2.png"
       type="image/x-icon"
     />
   </head>
@@ -35,7 +36,7 @@
           <img
             class="logo-nav"
             alt="logo"
-            src="/img/doc2.png"
+            src="assets/img/doc2.png"
           />
         </li>
         <div class="mobile-menu">
@@ -48,7 +49,7 @@
           <img
             class="logo-nav-mobile"
             alt="logo"
-            src="/img/doc2.png"
+            src="assets/img/doc2.png"
           />
         </li>
         <li>
@@ -86,7 +87,7 @@
       <div class="foto-bg">
         <img
           class="foto-perfil"
-          src="/img/doc3.webp"
+          src="assets/img/doc3.webp"
           alt="Foto ilustrativa"
         />
       </div>
@@ -96,7 +97,7 @@
         <p class="saudacao-text3">Desenvolvedor Web.</p>
         <div class="saudacao-botao" title="Curriculo">
           <a
-            href="/img/curriculo.pdf"
+            href="assets/img/curriculo.pdf"
             class="botao-com-painel"
             target="_blank"
             >Mostrar Currículo</a
@@ -143,7 +144,7 @@
         <p class="text-mobile3">Desenvolvedor Web.</p>
         <div class="container-botao-mobile" title="Curriculo">
           <a
-            href="/img/curriculo.pdf"
+            href="assets/img/curriculo.pdf"
             class="botao-mobile"
             target="_blank"
             > Visualizar CV</a
@@ -194,7 +195,7 @@
     <sections class="quem-sou-eu-section" id="quem-sou-eu">
       <div class="bg-quem-sou-eu">
         <span id="icone-quem-sou-eu" class="fas fa-user"> Quem sou eu</span>
-        <img class="foto-perfil" src="/img/doc4.jpeg">
+        <img class="foto-perfil" src="assets/img/doc4.jpeg">
       <div class="t">
         <p class="texto-quem-sou-eu">Olá, me chamo Lucas Reis Vasconcelos. Futuro desenvolvedor Full-Stack. Me considero uma pessoa muito curiosa, então, nas minhas horas vagas gosto de trabalhar em projetos pessoais e tento constantemente aprender de forma auto-didata algo novo para melhorar meus conjuntos de habilidades.
           <p class="texto-quem-sou-eu">
@@ -400,6 +401,6 @@
     </footer>
 
     <!-- END FOOTER SECTION -->
-    <script src="script.js"></script>
+    
   </body>
 </html>
