--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="line3"></div>
         </div>
         <li>
-          <p class="nome-nav">Lucas Reis</p>
+          <p class="nome-nav"> &lt;&#47;&gt;Lucas Reis</p>
           <img
             class="logo-nav-mobile"
             alt="logo"
